	- Fixed Iranian Quds focus not giving a faction opinion increase
	- Improved Serbia's starting position so there is no longer a debt war 
	- Shia Resistance Effect Typo in Effects
	- Recall Volunteers no longer displays if Game Rule isn't enabled
	- Fixed Double Saudi Royal Family Check in Diversify the Economy focus

Content:
	- Majors are now at the top of the list of game rules
	- Nationalist Germany now can claim Liechtenstein
	- Added initial missile stockpile to ITA
	- Significant updates to the Italian tree and starting political situation
	- Rework of the italian political branch with the introduction of a policy system based on decisions instead of focuses
	- Added several additional generic focus tree (Some small content additions)
	- Generic Focus Tree Corruption Focus
	- Restructured Brazil and Vietnam Navy
	- Improved Influence GUI Localization in tooltips
	- Healthcare and Social Spending are now more expensive for poorer countries
	- Russia's Putin Path slightly improved
v1.6.3
AI:
	- Investment AI will no longer offer you projects that exceed 730 days
	- Disabled Anti Bully Decisions for AI (They didn't use it anyways)
	- Armenian/Azerbaijan Hostile Relations added
	- Armenia will try and protect Artaskh
	- Tweaked the ability for the AI to build offices
	- Expanded their desire for industrial strength above all (Should build up longer)
	- Expanded some AI strategies for South Africa to be more domineering over the local African minors
	- Switzerland will protect and befriend it's Alpine Brothers
	- Eritrean AI will now be more cautious against Ethiopian in Ethiopian-Eritrean conflict
	- Fixed some issues with some AI frontlines for RAJ, UKR and CHI
	- Introduced AI Ship Limiter
	- Added "Tick" checks so the AI won't decrease and increase taxes in the same week
	- AI will strike back when nuked
	- On DoW AI will set its nuclear weapons on alert

Bugfixes:
	- Fixed Steam Link leading to outdated steam page