@@ -1423,6 +1423,7 @@ EU_office_category = {
 					id = EU_news.2
 				}
 			}
+			force_update_map_mode = { mapmode = EU_map_mode }
 		}
 		ai_will_do = {
 			factor = 40
@@ -1489,6 +1490,7 @@ EU_office_category = {
 					id = EU_news.3
 				}
 			}
+			force_update_map_mode = { mapmode = EU_map_mode }
 		}
 		ai_will_do = {
 			factor = 40
@@ -1555,6 +1557,7 @@ EU_office_category = {
 					id = EU_news.4
 				}
 			}
+			force_update_map_mode = { mapmode = EU_map_mode }
 		}
 		ai_will_do = {
 			factor = 40
@@ -1621,6 +1624,7 @@ EU_office_category = {
 					id = EU_news.5
 				}
 			}
+			force_update_map_mode = { mapmode = EU_map_mode }
 		}
 		ai_will_do = {
 			factor = 40
@@ -1687,6 +1691,7 @@ EU_office_category = {
 					id = EU_news.6
 				}
 			}
+			force_update_map_mode = { mapmode = EU_map_mode }
 		}
 		ai_will_do = {
 			factor = 40
@@ -1753,6 +1758,7 @@ EU_office_category = {
 					id = EU_news.7
 				}
 			}
+			force_update_map_mode = { mapmode = EU_map_mode }
 		}
 		ai_will_do = {
 			factor = 40
@@ -1819,6 +1825,7 @@ EU_office_category = {
 					id = EU_news.8
 				}
 			}
+			force_update_map_mode = { mapmode = EU_map_mode }
 		}
 		ai_will_do = {
 			factor = 40
@@ -1885,6 +1892,7 @@ EU_office_category = {
 					id = EU_news.9
 				}
 			}
+			force_update_map_mode = { mapmode = EU_map_mode }
 		}
 		ai_will_do = {
 			factor = 40
@@ -1951,6 +1959,7 @@ EU_office_category = {
 					id = EU_news.10
 				}
 			}
+			force_update_map_mode = { mapmode = EU_map_mode }
 		}
 		ai_will_do = {
 			factor = 40
@@ -2021,6 +2030,7 @@ EU_office_category = {
 					id = EU_news.11
 				}
 			}
+			force_update_map_mode = { mapmode = EU_map_mode }
 		}
 		ai_will_do = {
 			factor = 40
@@ -2089,6 +2099,7 @@ EU_office_category = {
 					id = EU_news.12
 				}
 			}
+			force_update_map_mode = { mapmode = EU_map_mode }
 		}
 		ai_will_do = {
 			factor = 40
@@ -2168,6 +2179,7 @@ EU_office_category = {
 				}
 				remove_ideas = EU_president
 			}
+			force_update_map_mode = { mapmode = EU_map_mode }
 		}
 	}
 
