@@ -6,22 +6,101 @@ scripted_map_modes = {
 			type = country
 
 			color = {
-				set_temp_variable = { red = 0 }
+				set_temp_variable = { red = 1 }
 				divide_temp_variable = { red = 255 }
-				set_temp_variable = { blue = 205 }
+				set_temp_variable = { blue = 225 }
 				divide_temp_variable = { blue = 255 }
-				set_temp_variable = { green = 0 }
+				set_temp_variable = { green = 1 }
 				divide_temp_variable = { green = 255 }
-				set_temp_variable = { alpha = 1.0 }
-
-				set_temp_variable = { thickness = 10.0 }
 
 				FROM = {
 					is_in_array = {
 						array = global.EU_member
 						value = THIS
 					}
+					if = {
+						limit = {
+							OR = {
+								has_idea = EU_commission_president
+								has_idea = EU_parliament_president
+								has_idea = EU_council_president
+							}
+						}
+						set_temp_variable = { red = 255 }
+						divide_temp_variable = { red = 255 }
+						set_temp_variable = { blue = 1 }
+						divide_temp_variable = { blue = 255 }
+						set_temp_variable = { green = 1 }
+						divide_temp_variable = { green = 255 }
+					}
+					else_if = { limit = { has_idea = EUU_euronavy_sc }
+						set_temp_variable = { red = 120 }
+						divide_temp_variable = { red = 255 }
+						set_temp_variable = { blue = 40 }
+						divide_temp_variable = { blue = 255 }
+						set_temp_variable = { green = 110 }
+						divide_temp_variable = { green = 255 }
+					}
+					else_if = { limit = { has_idea = EU_foreign_minister }
+						set_temp_variable = { red = 75 }
+						divide_temp_variable = { red = 255 }
+						set_temp_variable = { blue = 195 }
+						divide_temp_variable = { blue = 255 }
+						set_temp_variable = { green = 210 }
+						divide_temp_variable = { green = 255 }
+					}
+					else_if = { limit = { has_idea = EUU_euroarmy_sc }
+						set_temp_variable = { red = 75 }
+						divide_temp_variable = { red = 255 }
+						set_temp_variable = { blue = 95 }
+						divide_temp_variable = { blue = 255 }
+						set_temp_variable = { green = 70 }
+						divide_temp_variable = { green = 255 }
+					}
+					else_if = { limit = { has_idea = ECB_president }
+						set_temp_variable = { red = 255 }
+						divide_temp_variable = { red = 255 }
+						set_temp_variable = { blue = 35 }
+						divide_temp_variable = { blue = 255 }
+						set_temp_variable = { green = 255 }
+						divide_temp_variable = { green = 255 }
+					}
+					else_if = { limit = { has_idea = EU_finance_minister }
+						set_temp_variable = { red = 135 }
+						divide_temp_variable = { red = 255 }
+						set_temp_variable = { blue = 170 }
+						divide_temp_variable = { blue = 255 }
+						set_temp_variable = { green = 35 }
+						divide_temp_variable = { green = 255 }
+					}
+					else_if = { limit = { has_idea = frontex_ExDir }
+						set_temp_variable = { red = 800 }
+						divide_temp_variable = { red = 255 }
+						set_temp_variable = { blue = 170 }
+						divide_temp_variable = { blue = 255 }
+						set_temp_variable = { green = 35 }
+						divide_temp_variable = { green = 255 }
+					}
+					else_if = { limit = { has_idea = EUU_ambassador_unsc }
+						set_temp_variable = { red = 255 }
+						divide_temp_variable = { red = 255 }
+						set_temp_variable = { blue = 35 }
+						divide_temp_variable = { blue = 255 }
+						set_temp_variable = { green = 120 }
+						divide_temp_variable = { green = 255 }
+					}
+					else_if = { limit = { has_idea = EU_president }
+						set_temp_variable = { red = 255 }
+						divide_temp_variable = { red = 255 }
+						set_temp_variable = { blue = 180 }
+						divide_temp_variable = { blue = 255 }
+						set_temp_variable = { green = 120 }
+						divide_temp_variable = { green = 255 }
+					}
 				}
+
+				set_temp_variable = { alpha = 1.0 }
+				set_temp_variable = { thickness = 10.0 }
 			}
 
 			targets = {
