@@ -1145,7 +1145,7 @@ focus_tree = {
 		}
 		historical_ai = { }
 		select_effect = { }
-		bypass = { 
+		bypass = {
 
 		}
 		cancel = { }
@@ -1170,7 +1170,7 @@ focus_tree = {
 					create_wargoal = {
 						type = take_state_focus
 						target = PREV
-						state = 705
+						generator = { 705 }
 					}
 				}
 			}
@@ -1187,7 +1187,7 @@ focus_tree = {
 					create_wargoal = {
 						type = take_state_focus
 						target = PREV # prev equals scope for random country who owns state XXX
-						state = 706
+						generator = { 706 }
 					}
 				}
 			}
