@@ -91,9 +91,6 @@ on_actions = {
 						}
 					}
 				}
-				MNT = {
-					country_event = { id = MNT_NATO.1 days = 180 random_days = 45 }
-				}
 				CAN = {
 					#Fate of the Bombardier CSeries
 					country_event = { id = canada_md_politics.23 days = 288 random_days = 5 }
