@@ -154,6 +154,7 @@ set_POTEF_elect = {
 		}
 		subideology = "[?POTEF_elect|0]"
 	}
+	force_update_map_mode = { mapmode = EU_map_mode }
 	every_country = {
 		limit = {
 			has_idea = EU_member
