@@ -92,10 +92,7 @@ scripted_gui = {
 			}
 			# Begins project or it cancels the project if you have one active in given state
 			AC_build_button_click = {
-				if = {
-					limit = {
-						NOT = { is_in_array = { array = THIS.projects_in_state value = ROOT.id } }
-					}
+				if = { limit = { NOT = { is_in_array = { array = THIS.projects_in_state value = ROOT.id } } }
 					# PREV is the state target
 					THIS = {
 						set_variable = { ROOT.AC_state_target = THIS.id }
@@ -103,6 +100,8 @@ scripted_gui = {
 						CONTROLLER = { set_variable = { ROOT.AC_nation_target = THIS.id } }
 					}
 					ROOT = {
+						update_gui = yes
+						refresh_gui = yes
 						country_event = { id = AC_event.3 }
 					}
 				}
