@@ -3,7 +3,7 @@
  MAPMODE_EU_MAP_MODE: "EU Map Mode"
  MAPMODE_EU_MAP_MODE_DESCRIPTION: "Member States (dark) and potential Member States (bright) of the EU."
  EU_map_mode_tooltip: "EU Map Mode"
- EU_map_mode_tooltip_delayed: "Member in darker blue and potential member states in bright blue."
+ EU_map_mode_tooltip_delayed: "Member in darker blue and potential member states in bright blue.\n\nOffice Holders:\nDarker Red - President of the European Commission, President of the European Council, and President of the European Parliament\nBrown - Secretary General of EuroNavy\nDark Green - Secretary General of EuroArmy\nTurquoise - High Representative of the Union for Foreign Affairs and Security Policy\nPurple - European Minister of Economy and Finance\nYellow - President of the European Central Bank\nLight Green - Frontex Director\nOrange - EU Ambassador to the United Nations\nPink - "
  MAPMODE_NATO_MAP_MODE_NAME: "NATO Map Mode"
  MAPMODE_NATO_MAP_MODE: "NATO Map Mode"
  MAPMODE_NATO_MAP_MODE_DESCRIPTION: "Member States of NATO."
