@@ -1510,12 +1510,6 @@
  internal_faction.3.a: "We should grant the tax breaks."
  internal_faction.3.b: "We cannot afford to make such a concession."
 
- #Misc
-
- MNT_NATO.1.t: "Invitation to NATO"
- MNT_NATO.1.d: "United States has invited us to join NATO, should we join them or not? In December 2009, Montenegro was granted a Membership Action Plan, the final step in an application for membership in the organization. A formal invitation was issued by the alliance on 2 December 2015, with accession negotiations concluded with the signature by the Foreign Ministers of an Accession Protocol on 19 May 2016."
- MNT_NATO.1.a: "We will join!"
- MNT_NATO.1.b: "We will not join."
 
  ### Islamic State ###
 
