@@ -1514,12 +1514,6 @@
  internal_faction.3.a: "Мы должны предоставить налоговые льготы."
  internal_faction.3.b: "Мы не можем позволить себе пойти на такую уступку."
 
- #Разное
-
- MNT_NATO.1.t: "Приглашение в НАТО"
- MNT_NATO.1.d: "США пригласили нас вступить в НАТО, должны мы вступать в них или нет? В декабре 2009 года Черногории был предоставлен План действий по членству, заключительный этап подачи заявки на членство в организации. Официальное приглашение было направлено альянсом 2 декабря 2015 года, а переговоры о присоединении завершились подписанием министрами иностранных дел Протокола о присоединении 19 мая 2016 года."
- MNT_NATO.1.a: "Присоединяемся!"
- MNT_NATO.1.b: "Мы не будем присоединяться."
 
  ### Исламское государство ###
 
