@@ -35,6 +35,8 @@ Bugfixes:
 	- Shia Resistance Effect Typo in Effects
 	- Recall Volunteers no longer displays if Game Rule isn't enabled
 	- Fixed Double Saudi Royal Family Check in Diversify the Economy focus
+	- Fixed Investment Exploit where you find the cheapest state and then invest in other states with the lower cost
+	- Fixed the triggering of a non-existant event in 2017
 
 Content:
 	- Majors are now at the top of the list of game rules
@@ -48,6 +50,8 @@ Content:
 	- Improved Influence GUI Localization in tooltips
 	- Healthcare and Social Spending are now more expensive for poorer countries
 	- Russia's Putin Path slightly improved
+	- EU map mode now has unique colors for office holders
+
 v1.6.3
 AI:
 	- Investment AI will no longer offer you projects that exceed 730 days
